--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,12 @@ spring.security.user.name=providerPortal
 spring.security.user.password=providerPortal
 
 #logging.level.org.springframework.security=DEBUG
+
+
+#Jwt Config
+spring.jwt.authorization=Authorization
+spring.jwt.password=LPAdmin
+spring.jwt.passcode=$2a$10$CENJTN7piBDysnaViePT1eUeqqi2mG2XK8aUqa2LfYXaJ1.VzTIMe
+spring.jwt.secret=secret
+#Following time is given as Seconds
+spring.jwt.expiration=70
