--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=8181
 spring.datasource.url = jdbc:mysql://localhost:3306/abhi_empanelment?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username = root
 spring.datasource.password = Login123$
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -27,7 +27,7 @@ spring.servlet.multipart.max-file-size=15MB
 spring.security.user.name=providerPortal
 spring.security.user.password=providerPortal
 
-#logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=DEBUG
 
 
 #Jwt Config
